# ducklake-lab

./: README.md  Taskfile.yml  docker-compose.yaml  pyproject.toml
data/: popolazione_residente.parquet
scripts/: cli_query.py  config.py  ingest_data.py  init_catalog.py
